# bydfipy

./: .gitignore  LICENSE  README.md  pyproject.toml
bydfipy/: __init__.py  client.py  constants.py  exceptions.py  types.py  utils.py  websocket.py
examples/: rest_api_example.py  websocket_example.py
tests/: test_client.py  test_utils.py
